fix: corrected page overflow issue

--- a/src/componenets/App/App.css
+++ b/src/componenets/App/App.css
@@ -1,3 +1,17 @@
+.app_page {
+    min-width: 320px;
+    max-width: 1440px;
+    font-family: 'Familjen Grotesk';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+    margin-left: auto;
+    margin-right: auto;
+    color: #000000;
+    padding: 0;
+}
+
 .weather {
     position: relative;
 }
