--- a/src/componenets/Footer/Footer.css
+++ b/src/componenets/Footer/Footer.css
@@ -9,6 +9,5 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 20px;
-    width: 100%;
     color: #000000;
 }
