--- a/src/componenets/WeatherCard/WeatherCard.css
+++ b/src/componenets/WeatherCard/WeatherCard.css
@@ -3,6 +3,11 @@
     src: url('../../../public/fonts/Familjen_Grotesk/FamiljenGrotesk-Regular.ttf');
 }
 
+.weather {
+    display: flex;
+    justify-content: center;
+}
+
 .weather_info {
     font-family: 'Familjen Grotesk';
     font-style: normal;
